@@ -1,3 +1,12 @@
+2005-08-06  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/profile_container.cpp:
+	* libpp/profile_container.h:
+	* libpp/symbol_container.cpp:
+	* libpp/symbol_container.h: find symbol by source filename, linenr :
+	  change public interface to return multiple symbols
+	* pp/opannotate.cpp: Fix #1252754
+
 2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* doc/opimport.1.in:
